--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 dj-database-url==2.1.0
 Django==5.0.4
 django-bootstrap5==24.1
+gunicorn==22.0.0
+packaging==24.0
 psycopg2-binary==2.9.9
 pytz==2024.1
 sqlparse==0.4.4
